NetBSD Problem Report #41840

From www@NetBSD.org  Fri Aug  7 11:47:57 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id F115963C270
	for <gnats-bugs@gnats.netbsd.org>; Fri,  7 Aug 2009 11:47:56 +0000 (UTC)
Message-Id: <20090807114756.C3F3C63BDF9@www.NetBSD.org>
Date: Fri,  7 Aug 2009 11:47:56 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing parenthesis in puffs_vnops.c
X-Send-Pr-Version: www-1.0

>Number:         41840
>Category:       kern
>Synopsis:       Missing parenthesis in puffs_vnops.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    pooka
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Aug 07 11:50:00 +0000 2009
>Closed-Date:    Sat Sep 12 18:55:08 +0000 2009
>Last-Modified:  Sat Sep 12 18:55:08 +0000 2009
>Originator:     Henning Petersen
>Release:        current-NetBSD
>Organization:
>Environment:
>Description:
Missing parenthesis found with programm cppcheck.
>How-To-Repeat:

>Fix:
RCS file: /cvsroot/src/sys/fs/puffs/puffs_vnops.c,v
retrieving revision 1.131
diff -r1.131 puffs_vnops.c
2425c2425
< 		pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
---
> 		pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,

>Release-Note:

>Audit-Trail:
From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/41840: Missing parenthesis in puffs_vnops.c
Date: Fri, 07 Aug 2009 15:29:01 +0200

 gnats-admin@netbsd.org schrieb:
 > Thank you very much for your problem report.
 > It has the internal identification `kern/41840'.
 > The individual assigned to look at your
 > report is: kern-bug-people. 
 >
 >   
 >> Category:       kern
 >> Responsible:    kern-bug-people
 >> Synopsis:       Missing parenthesis in puffs_vnops.c
 >> Arrival-Date:   Fri Aug 07 11:50:00 +0000 2009
 >>     
 >
 >
 > __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________
 >
 > The message was checked by ESET NOD32 Antivirus.
 >
 > http://www.eset.com
 >
 >
 >
 >
 >   
 diff -u -r1.131 puffs_vnops.c
 --- sys/fs/puffs/puffs_vnops.c    26 Nov 2008 20:17:33 -0000    1.131
 +++ sys/fs/puffs/puffs_vnops.c    7 Aug 2009 12:17:38 -0000
 @@ -2422,7 +2422,7 @@
  #ifdef notnowjohn
          /* allocate worst-case memory */
          runsizes = ((npages / 2) + 1) * sizeof(struct puffs_cacherun);
 -        pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 +        pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
              locked ? KM_NOSLEEP : KM_SLEEP);




 __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________

 The message was checked by ESET NOD32 Antivirus.

 http://www.eset.com


From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/41840: Missing parenthesis in puffs_vnops.c
Date: Fri, 07 Aug 2009 14:51:09 +0200

 gnats-admin@netbsd.org schrieb:
 > Thank you very much for your problem report.
 > It has the internal identification `kern/41840'.
 > The individual assigned to look at your
 > report is: kern-bug-people. 
 >
 >   
 >> Category:       kern
 >> Responsible:    kern-bug-people
 >> Synopsis:       Missing parenthesis in puffs_vnops.c
 >> Arrival-Date:   Fri Aug 07 11:50:00 +0000 2009
 >>     
 >
 >
 > __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________
 >
 > The message was checked by ESET NOD32 Antivirus.
 >
 > http://www.eset.com
 >
 >
 >
 >
 >   
 diff -u -r1.131 puffs_vnops.c
 --- sys/fs/puffs/puffs_vnops.c    26 Nov 2008 20:17:33 -0000    1.131
 +++ sys/fs/puffs/puffs_vnops.c    7 Aug 2009 12:17:38 -0000
 @@ -2422,7 +2422,7 @@
  #ifdef notnowjohn
          /* allocate worst-case memory */
          runsizes = ((npages / 2) + 1) * sizeof(struct puffs_cacherun);
 -        pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 +        pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
              locked ? KM_NOSLEEP : KM_SLEEP);



 __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________

 The message was checked by ESET NOD32 Antivirus.

 http://www.eset.com


From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/41840: Missing parenthesis in puffs_vnops.c
Date: Fri, 07 Aug 2009 14:40:36 +0200

 henning.petersen@t-online.de schrieb:
 >> Number:         41840
 >> Category:       kern
 >> Synopsis:       Missing parenthesis in puffs_vnops.c
 >> Confidential:   no
 >> Severity:       serious
 >> Priority:       medium
 >> Responsible:    kern-bug-people
 >> State:          open
 >> Class:          sw-bug
 >> Submitter-Id:   net
 >> Arrival-Date:   Fri Aug 07 11:50:00 +0000 2009
 >> Originator:     Henning Petersen
 >> Release:        current-NetBSD
 >> Organization:
 >> Environment:
 >> Description:
 >>     
 > Missing parenthesis found with programm cppcheck.
 >   
 >> How-To-Repeat:
 >>     
 >
 >   
 >> Fix:
 >>     
 > RCS file: /cvsroot/src/sys/fs/puffs/puffs_vnops.c,v
 > retrieving revision 1.131
 > diff -r1.131 puffs_vnops.c
 > 2425c2425
 > < 		pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 > ---
 >   
 >> 		pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
 >>     
 >
 >
 > __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________
 >
 > The message was checked by ESET NOD32 Antivirus.
 >
 > http://www.eset.com
 >
 >
 >
 >
 >   
 diff -u -r1.131 puffs_vnops.c
 --- sys/fs/puffs/puffs_vnops.c    26 Nov 2008 20:17:33 -0000    1.131
 +++ sys/fs/puffs/puffs_vnops.c    7 Aug 2009 12:17:38 -0000
 @@ -2422,7 +2422,7 @@
  #ifdef notnowjohn
          /* allocate worst-case memory */
          runsizes = ((npages / 2) + 1) * sizeof(struct puffs_cacherun);
 -        pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 +        pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
              locked ? KM_NOSLEEP : KM_SLEEP);

          /*



 __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________

 The message was checked by ESET NOD32 Antivirus.

 http://www.eset.com


From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/41840: Missing parenthesis in puffs_vnops.c
Date: Fri, 07 Aug 2009 15:16:26 +0200

 gnats-admin@netbsd.org schrieb:
 > Thank you very much for your problem report.
 > It has the internal identification `kern/41840'.
 > The individual assigned to look at your
 > report is: kern-bug-people. 
 >
 >   
 >> Category:       kern
 >> Responsible:    kern-bug-people
 >> Synopsis:       Missing parenthesis in puffs_vnops.c
 >> Arrival-Date:   Fri Aug 07 11:50:00 +0000 2009
 >>     
 >
 >
 > __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________
 >
 > The message was checked by ESET NOD32 Antivirus.
 >
 > http://www.eset.com
 >
 >
 >
 >
 >   
 --- sys/fs/puffs/puffs_vnops.c    26 Nov 2008 20:17:33 -0000    1.131
 +++ sys/fs/puffs/puffs_vnops.c    7 Aug 2009 12:17:38 -0000
 @@ -2422,7 +2422,7 @@
  #ifdef notnowjohn
          /* allocate worst-case memory */
          runsizes = ((npages / 2) + 1) * sizeof(struct puffs_cacherun);
 -        pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 +        pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
              locked ? KM_NOSLEEP : KM_SLEEP);

          /*



 __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________

 The message was checked by ESET NOD32 Antivirus.

 http://www.eset.com


From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/41840: Missing parenthesis in puffs_vnops.c
Date: Fri, 07 Aug 2009 15:17:29 +0200

 henning.petersen@t-online.de schrieb:
 >> Number:         41840
 >> Category:       kern
 >> Synopsis:       Missing parenthesis in puffs_vnops.c
 >> Confidential:   no
 >> Severity:       serious
 >> Priority:       medium
 >> Responsible:    kern-bug-people
 >> State:          open
 >> Class:          sw-bug
 >> Submitter-Id:   net
 >> Arrival-Date:   Fri Aug 07 11:50:00 +0000 2009
 >> Originator:     Henning Petersen
 >> Release:        current-NetBSD
 >> Organization:
 >> Environment:
 >> Description:
 >>     
 > Missing parenthesis found with programm cppcheck.
 >   
 >> How-To-Repeat:
 >>     
 >
 >   
 >> Fix:
 >>     
 > RCS file: /cvsroot/src/sys/fs/puffs/puffs_vnops.c,v
 > retrieving revision 1.131
 > diff -r1.131 puffs_vnops.c
 > 2425c2425
 > < 		pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 > ---
 >   
 >> 		pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
 >>     
 >
 >
 > __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________
 >
 > The message was checked by ESET NOD32 Antivirus.
 >
 > http://www.eset.com
 >
 >
 >
 >
 >   
 --- sys/fs/puffs/puffs_vnops.c    26 Nov 2008 20:17:33 -0000    1.131
 +++ sys/fs/puffs/puffs_vnops.c    7 Aug 2009 12:17:38 -0000
 @@ -2422,7 +2422,7 @@
  #ifdef notnowjohn
          /* allocate worst-case memory */
          runsizes = ((npages / 2) + 1) * sizeof(struct puffs_cacherun);
 -        pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 +        pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
              locked ? KM_NOSLEEP : KM_SLEEP);

          /*



 __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________

 The message was checked by ESET NOD32 Antivirus.

 http://www.eset.com


Responsible-Changed-From-To: kern-bug-people->pooka
Responsible-Changed-By: wiz@NetBSD.org
Responsible-Changed-When: Fri, 07 Aug 2009 13:57:31 +0000
Responsible-Changed-Why:
Over to puffs maintainer.
(diff might be wrong -- what is "sizeof_puffs_cacheinfo" -- perhaps that should be sizeof(puffs_cacheinfo


From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/41840: Missing parenthesis in puffs_vnops.c
Date: Fri, 07 Aug 2009 15:11:37 +0200

 gnats-admin@netbsd.org schrieb:
 > Thank you very much for your problem report.
 > It has the internal identification `kern/41840'.
 > The individual assigned to look at your
 > report is: kern-bug-people. 
 >
 >   
 >> Category:       kern
 >> Responsible:    kern-bug-people
 >> Synopsis:       Missing parenthesis in puffs_vnops.c
 >> Arrival-Date:   Fri Aug 07 11:50:00 +0000 2009
 >>     
 >
 >
 > __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________
 >
 > The message was checked by ESET NOD32 Antivirus.
 >
 > http://www.eset.com
 >
 >
 >
 >
 >   
 --- sys/fs/puffs/puffs_vnops.c    26 Nov 2008 20:17:33 -0000    1.131
 +++ sys/fs/puffs/puffs_vnops.c    7 Aug 2009 12:17:38 -0000
 @@ -2422,7 +2422,7 @@
  #ifdef notnowjohn
          /* allocate worst-case memory */
          runsizes = ((npages / 2) + 1) * sizeof(struct puffs_cacherun);
 -        pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 +        pcinfo = kmem_zalloc((sizeof_puffs_cacheinfo) + runsize,
              locked ? KM_NOSLEEP : KM_SLEEP);

          /*



 __________ Information from ESET NOD32 Antivirus, version of virus signature database 4314 (20090807) __________

 The message was checked by ESET NOD32 Antivirus.

 http://www.eset.com


From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41840 CVS commit: src/sys/fs/puffs
Date: Sat, 12 Sep 2009 18:17:55 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Sep 12 18:17:55 UTC 2009

 Modified Files:
 	src/sys/fs/puffs: puffs_vnops.c

 Log Message:
 Fix typo:
 -		pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize,
 +		pcinfo = kmem_zalloc(sizeof(struct puffs_cacheinfo) + runsize,
 in #ifdef'ed out code, per paired kmem_free() in the same function.
 Closes PR kern/41840.


 To generate a diff of this commit:
 cvs rdiff -u -r1.131 -r1.132 src/sys/fs/puffs/puffs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 13 Sep 2009 03:55:08 +0900
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.