Fix typo: -		pcinfo = kmem_zalloc(sizeof_puffs_cacheinfo) + runsize, +		pcinfo = kmem_zalloc(sizeof(struct puffs_cacheinfo) + runsize, in #ifdef'ed out code, per paired kmem_free() in the same function. Closes PR kern/41840.